--- a/dev/web/src/sass/hidari-kikino-eren/_button.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_button.scss
@@ -16,9 +16,6 @@
   @include mediaQuery(mediumDesktop) {
     height: 12.10811vw;
   }
-  @include mediaQuery(wideDesktop) {
-    border-width: 1.11111px;
-  }
 
   &:before, &:after {
     position: absolute;
@@ -88,9 +85,6 @@
       }
       @include mediaQuery(mediumDesktop) {
         font-size: 1.40541vw;
-      }
-      @include mediaQuery(wideDesktop) {
-        font-size: 14.44444px;
       }
     }
 
@@ -168,10 +162,6 @@
       display: block;
       width: 1.45833vw;
       height: 1.45833vw;
-    }
-    @include mediaQuery(wideDesktop) {
-      width: 23.33333px;
-      height: 23.33333px;
     }
   }
 
@@ -281,9 +271,6 @@
         }
       }
     }
-    @include mediaQuery(wideDesktop) {
-      border-width: 1.11111px;
-    }
 
     
 
@@ -321,11 +308,180 @@
         width: 1.38889vw;
         height: .79861vw;
       }
-      @include mediaQuery(wideDesktop) {
-        left: 11.11111px;
-        width: 22.22222px;
-        height: 12.77778px;
+    }
+  }
+}
+
+
+
+
+
+
+/************************************************/
+
+.btn {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border: solid .26667vw #fff;
+  border-width: .26667vw;
+  background-color: #000;
+  overflow: hidden;
+  cursor: pointer;
+  @include mediaQuery {
+    border: solid .06944vw #fff;
+    border-width: .06944vw;
+  }
+
+  &:before, &:after {
+    position: absolute;
+    content: '';
+    display: block;
+    background-color: #02d0d0;
+    transition: transform .4s cubic-bezier(.19,1,.22,1);
+    backface-visibility: hidden;
+    z-index: 0;
+  }
+
+  &_inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+  }
+
+  &:hover {
+    .btn_label {
+      color: #e50013;
+      transition-duration: .1s;
+    }
+    .btn_icon {
+      fill: #e50013;
+      transition-duration: .1s;
+    }
+  }
+
+  span {  //文字
+    position: relative;
+    color: #fff;
+    font-size: 5.06667vw;
+    letter-spacing: .16em;
+    text-indent: .16em;
+    transition: color .4s cubic-bezier(.19,1,.22,1);
+    transform: scaleX(.85);
+    z-index: 2;
+    @include mediaQuery {
+      font-size: .90278vw;
+    }
+    @include mediaQuery(mediumDesktop) {
+      font-size: 1.40541vw;
+    }
+  }
+
+  svg { //アイコン
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 6.93333vw;
+    height: 6.93333vw;
+    fill: #fff;
+    margin: auto;
+    z-index: 2;
+    @include mediaQuery {
+      display: block;
+      width: 1.45833vw;
+      height: 1.45833vw;
+    }
+  }
+}
+
+.btn.mod-vText {
+  .btn_inner {
+    > span {
+      @include mediaQuery {
+        writing-mode: vertical-rl !important;
+        text-align: center !important;
+        letter-spacing: .2em !important;
+        text-indent: .2em !important;
       }
+    }
+  }
+}
+
+.btn.mod-leftNext {
+  &_inner {
+    > svg {
+      position: absolute;
+      top: 0;
+      right: auto;
+      bottom: 0;
+      left: 3.2vw;
+      width: 5.33333vw;
+      height: 3.06667vw;
+      fill: #e50013;
+      margin: auto;
+      display: block;
+      z-index: 2;
+      @include mediaQuery {
+        display: none;
+      }
+
+      // &:hover {
+      //   fill: #e50013;
+      //   transition-duration: .1s;
+      // }
+    }
+  }
+}
+
+.btn.mod-animeH {
+  &:before, &:after {
+    width: 101%;
+    height: 51%;
+    transform: scaleX(0);
+  }
+  &:before {
+    top: 0;
+    left: 0;
+    transform-origin: center left;
+  }
+  &:after {
+    top: auto;
+    bottom: 0;
+    transform-origin: center right;
+  }
+  &:hover {
+    &:before, &:after {
+      transform: scaleX(1);
+    }
+  }  
+}
+
+.btn.mod-animeV {
+  &:before, &:after {
+    width: 51%;
+    height: 102%;
+    transform: scaleY(0);
+    transform-origin: top center;
+    top: 0;
+    left: 0;
+  }
+  
+  &:after {
+    transform-origin: bottom center;
+    top: auto;
+    right: 0;
+    bottom: 0;
+    left: auto; 
+  }
+  &:hover {
+    &:before, &:after {
+      transform: scaleY(1);
     }
   }
 }
