--- a/dev/web/src/sass/hidari-kikino-eren/_button.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_button.scss
@@ -1,18 +1,3 @@
-/*
-以下のDOM構造で使用
-
-<div class="buttonSquare">
-  <a class="buttonSquare_inner" href="">
-    <span>トップ</span>
-    <svg>
-      <use xlink:href="#arrow">
-    </svg>
-  </a>
-</div>
-
-*/
-
-
 .tab {
   position: absolute;
   display: block;
@@ -155,6 +140,9 @@
     @include mediaQuery(mediumDesktop) {
       font-size: 1.40541vw;
     }
+    @include mediaQuery(wideDesktop) {
+      font-size: 14.44444px;
+    }
   }
 
   &_squareIcon { //svgアイコンに付与するクラス
@@ -163,15 +151,19 @@
     right: 0;
     bottom: 0;
     left: 0;
+    display: block;
     width: 6.93333vw; //正方形
     height: 6.93333vw;
     fill: #fff;
     margin: auto;
     z-index: 2;
     @include mediaQuery {
-      display: block;
       width: 1.45833vw;
       height: 1.45833vw;
+    }
+    @include mediaQuery(wideDesktop) {
+      width: 23.33333px;
+      height: 23.33333px;
     }
   }
 
